Changed font mods, fix overflow of app description in app-info pg

--- a/src/app/components/header-bar/header-bar.component.scss
+++ b/src/app/components/header-bar/header-bar.component.scss
@@ -1,9 +1,10 @@
 ion-title {
     position: absolute;
+    z-index: 2;
     left: 0px !important;
     top: 0px !important;
     width: 100%;
     height: 100%;
     text-align: center !important;
-    z-index: 2;
+    font-weight: 700;
 }
