--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -37,6 +37,8 @@
 .app-layout {
     p {
         color: #161723 !important;
+        font-size: 10px;
+        font-weight: 600;
     }
 }
 
